--- a/styles/flowershop.css
+++ b/styles/flowershop.css
@@ -1,16 +1,19 @@
+/* body part */
+/* *{
+    margin: 0;
+} */
 /* container-one */
 .container-one {
     display: flex;
-    position: absolute; 
     background-color: #e554733a;
     font-size: 30px;
     font-weight: 700;
+    padding: 0px 30px;
 }
 
 .paragraph {
     font-size: 18px;
     font-weight: 200;
-    
 }
 
 .btn {
@@ -18,5 +21,48 @@
     border-radius: 8px;
     color: white;
     padding: 20px 43px 20px 43px;
+    border: none;
 
 }
+#cone-img img{
+    height: 500px;
+}
+#cone-img{
+    height: 500px;
+    margin: 0px;
+}
+/* container one end */
+
+/* container two start */
+.conaitner-two{
+    align-items: center;
+    text-align: center;
+    display: flex ;
+    flex-direction: column;
+    gap: 50px;
+    margin: 0px;
+}
+.cart-image{
+    display: flex;
+    gap: 30px;
+}
+.cart-image img{
+    height: 428px;
+    width: 310px;
+}
+.cart-one{
+    background-color: rgba(167, 33, 98, 0.15);
+    padding: 90px 30px 0px 30px;
+    border-radius: 100px 100px 0px 0px;
+}
+.cart-two{
+    background-color: rgba(5, 151, 160, 0.15);
+    padding: 90px 30px 0px 30px;
+    border-radius: 100px 100px 0px 0px;
+}
+.cart-three{
+    background-color: rgba(71, 125, 17, 0.15);
+    padding: 90px 30px 0px 30px;
+    border-radius: 100px 100px 0px 0px;
+}
+/* container two end */
