--- a/styles/flowershop.css
+++ b/styles/flowershop.css
@@ -14,6 +14,7 @@
 .paragraph {
     font-size: 18px;
     font-weight: 200;
+
 }
 
 .btn {
@@ -42,14 +43,16 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    margin: 0px;
+    /* gap: 5px; */
+    /* margin: 0px; */
+
 }
 
 .cart-image {
     display: flex;
     gap: 30px;
 }
+
 
 .cart-image img {
     height: 428px;
@@ -60,6 +63,7 @@
     background-color: rgba(167, 33, 98, 0.15);
     padding: 90px 30px 0px 30px;
     border-radius: 100px 100px 0px 0px;
+    text-align: center;
 }
 
 .cart-two {
@@ -74,8 +78,20 @@
     border-radius: 100px 100px 0px 0px;
 }
 
-/* .paragraph {
+.flr-text {
     display: flex;
+    gap: 300px;
+    text-decoration: underline;
+}
+
+/* .flr-text {
+    display: flex;
+    gap: 355px;
+    padding: 30px 30px;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+
 
 } */
 
@@ -85,48 +101,133 @@
 
 .container-three {
     display: flex;
+    justify-content: space-between;
     gap: 100px;
-    padding: 90px 30px 0px 30px;
-    background-color:  rgba(39, 39, 39, 0.05);
-    align-items: center;
+    padding: 86px 175px;
+    /* padding: 90px 30px 0px 30px; */
+    background-color: rgba(39, 39, 39, 0.05);
+    /* align-items: center; */
+    /* border-radius: 5px; */
+
+    text-align: center;
+    margin: 0px 0px;
+
+
 
 }
-    
+
 /* container three end */
 
 /* container four start */
 
-.container-four{
+.container-four {
     display: flex;
     background-color: rgba(229, 84, 115, 0.05);
+    /* border-radius: 8px; */
+    margin-top: 70px;
+    justify-content: space-around;
+
 }
+
+.section-one {
+    text-align: center;
+    /* margin-bottom: 230px; */
+    /* margin-right: 20px; */
+    /* justify-content: space-between; */
+    width: 318px;
+    height: 420px;
+    margin-left: 350px;
+    margin-right: 100px;
+    margin-top: 230px;
+    margin-bottom: 160px;
+
+
+}
+
+.section-two {
+    width: 318px;
+    height: 420px;
+    margin: 100px;
+    margin-bottom: 100px;
+}
+
+
+
+
 
 
 /* container four end */
 
 /* container five start */
-.container-five{
+.container-five {
+    align-items: center;
+    text-align: center;
     display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+
+}
+
+.flowers-styls {
+    display: flex;
+    padding: 90px 30px 0px 30px;
+    border-radius: 100px 100px 0px 0px;
+    gap: 15px;
+
+
+}
+
+.flowers-styls img {
+    border: 5px dashed silver;
 }
 
 /* container five end */
 
 /* container six start */
-.container-six{
-    background-image: url('Flower Asset/Rectangle 9.png');
+.container-six {
+    margin-top: 50px;
+    text-align: center;
+    /* border-top: 120px; */
+    background-image: url("/Flower_Asset/Rectangle\ 9.png");
+    height: 449px;
+    width: 1440px;
+    
+
 }
+.fnt-styl{
+    padding: 100px;
+}
+
+
+.btn-styls {
+    /* border-radius: 8px; */
+    /* color: white; */
+    padding: 20px 43px 20px 43px;
+    border: none;
+
+}
+
+
+
 /* container six end */
 
 /* container seven start */
 
-.container-seven{
+.container-seven {
     text-align: center;
     background-color: black;
+    margin-top: 30px;
+    height: 449px;
+    width: 1440px;
+    padding: 130px;
+   
 }
-.fnt-clr{
+
+.fnt-clr {
     color: rgb(229, 84, 115);
 }
-.text-clr{
+
+.text-clr {
     color: white;
 }
 
